--- a/data/solubility_aqsoldb/meta.yaml
+++ b/data/solubility_aqsoldb/meta.yaml
@@ -29,9 +29,9 @@ identifiers:
     - id: compound_name
       type: Other
       names:
-          - compound name
-          - drug name
-          - generic drug name
+          - noun: compound name
+          - noun: drug name
+          - noun: generic drug name
       description: compound name
 license: CC BY 4.0
 links:
