--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ training = [
         "protobuf<3.20",
         "s3fs",
         "boto3<=1.26.90", # https://github.com/boto/boto3/issues/3648
+        "transformers<4.30",
 ]
 
 [tool.setuptools_scm]
