--- a/data/iupac_goldbook/meta.yaml
+++ b/data/iupac_goldbook/meta.yaml
@@ -21,10 +21,10 @@ targets:
     - id: definition
       description: definition of a chemistry term
       units:
-      type: text
+      type: string
       names:
-          - definition
-          - definition of a chemistry term
+          - noun: definition
+          - noun: definition of a chemistry term
 identifiers:
     - id: term
       type: Other
