--- a/data/chebi_20/meta.yaml
+++ b/data/chebi_20/meta.yaml
@@ -17,10 +17,9 @@ identifiers:
     - id: compound_id
       type: Other
       names:
-          - compound id
+          - noun: compound id
       sample: false
-      description:
-          noun: This is the PubChem CID to identify a given molecule.
+      description: This is the PubChem CID to identify a given molecule.
 license: CC BY 4.0
 links:
     - name: Research Paper
