chore: Change identifier to Optional[List[Name]] (#318)
* chore: Change identifier to `Optional[List[Name]]`

Fixes #316

* chore: refactor additional entries

* chore: fix remaining files

* chore: precommit

* feat: fix chebi_20

* feat: fix chebi_20 fix

---------

Co-authored-by: Michael Pieler <36303596+MicPie@users.noreply.github.com>
Co-authored-by: Michael Pieler <Michael.Pieler@Gmail.com>

--- a/data/chebi_20/meta.yaml
+++ b/data/chebi_20/meta.yaml
@@ -17,7 +17,7 @@ identifiers:
     - id: compound_id
       type: Other
       names:
-          - compound id
+          - noun: compound id
       sample: false
       description: This is the PubChem CID to identify a given molecule.
 license: CC BY 4.0
