--- a/experiments/configs/data_configs/hf_data.yml
+++ b/experiments/configs/data_configs/hf_data.yml
@@ -4,3 +4,4 @@ dataset_name: 'EleutherAI/pile'
 dataset_args: {'name': 'pubmed', 'split': 'train'}
 batch_size: 1
 string_key: 'text'
+save_path: '/fsx/proj-chemnlp/data/example_tokenised'
