add save path for preparing datasets (#321)
* add save path for preparing datasets

* remove out_dir

* add default save path example

--- a/experiments/configs/data_configs/hf_data.yml
+++ b/experiments/configs/data_configs/hf_data.yml
@@ -3,5 +3,5 @@ context_length: 2048
 dataset_name: 'EleutherAI/pile'
 dataset_args: {'name': 'pubmed', 'split': 'train'}
 batch_size: 1
-out_dir: '/fsx/proj-chemnlp/data'
 string_key: 'text'
+save_path: '/fsx/proj-chemnlp/data/example_tokenised'
