Add wiki documentation and dependencies (#314)
* add dependencies to a tokenisation section

* add example of wiki data prep

* add ztandard to deps (new cluster)

* add info about optional dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,5 +49,11 @@ training = [
         "transformers<4.30", # https://github.com/huggingface/transformers/issues/24359
 ]
 
+tokenisation = [
+        "zstandard",
+        "apache_beam", 
+        "mwparserfromhell"
+]
+
 [tool.setuptools_scm]
 version_scheme = "post-release"
