--- a/data/kg/chebi_chebi/meta.yaml
+++ b/data/kg/chebi_chebi/meta.yaml
@@ -44,4 +44,5 @@ bibtex:
       \ Volkan},\ntitle = \"{CROssBAR: comprehensive resource of biomedical relations with knowledge graph representations}\",\njournal = {Nucleic Acids\
       \ Research},\nvolume = {49},\nnumber = {16},\npages = {e96-e96},\nyear = {2021},\nmonth = {06},\nissn = {0305-1048},\ndoi = {10.1093/nar/gkab543},\n\
       url = {https://doi.org/10.1093/nar/gkab543},\n}"
-templates: []
+templates:
+    - The {node1_name#} {rel1_type#} {node2_name#}.
