fix: typo multiple choice templates

--- a/data/tabular/lipophilicity/meta.yaml
+++ b/data/tabular/lipophilicity/meta.yaml
@@ -40,3 +40,21 @@ bibtex:
       year={2015},
       institution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk}
       }
+templates:
+    - |-
+      Task: Please answer the multiple choice question below with {%multiple_choice_enum%3-6%aA1}.
+      Question: What is the {exp__names__noun} of the {SMILES__description} {SMILES#}?
+      Options:
+      {exp%}
+      Answer: {%multiple_choice_result}
+    - |-
+      Question: Please estimate the {exp__names__noun} of {SMILES#} by picking one choice of {%multiple_choice_enum%3-6%aA1}.
+      Options:
+      {exp%}
+      Answer: {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question below with {%multiple_choice_enum%3-6%aA1}.
+      Question: What is the {exp__names__noun} of the {SMILES__description} {SMILES#}?
+      Options:
+      {exp%}
+      Answer:<EOI> {%multiple_choice_result}
