feat: add templates for bioavailability_ma_et_al

--- a/data/tabular/bioavailability_ma_et_al/meta.yaml
+++ b/data/tabular/bioavailability_ma_et_al/meta.yaml
@@ -12,7 +12,7 @@ targets:
       names:
           - noun: oral bioavailability
           - noun: bioavailability
-          - adjective: is bioavailable
+          - adjective: bioavailable
       uris:
           - http://ncicb.nci.nih.gov/xml/owl/EVS/Thesaurus.owl#C70913
 benchmarks:
@@ -52,3 +52,22 @@ bibtex:
       title = {Prediction models of human plasma protein binding rate and
       oral bioavailability derived by using GA-CG-SVM method},
       journal = {Journal of Pharmaceutical and Biomedical Analysis}
+templates:
+    - The molecule with the {SMILES__description} representation of {SMILES#} exhibits {bioavailable#no &NULL}{bioavailable__names__adjective} properties.
+    - Based on the {SMILES__description} representation {SMILES#}, the molecule has {bioavailable#no &NULL}{bioavailable__names__adjective} characteristics.
+    - The {SMILES__description} {SMILES#} represents a molecule that is {bioavailable#not &NULL}identified as {bioavailable__names__adjective}.
+    - The {SMILES__description} {SMILES#} is {bioavailable#no &NULL}{bioavailable__names__adjective}.
+    - The molecule {SMILES#} is {bioavailable__names__adjective}.
+    - Is the {SMILES__description} {SMILES#} {bioavailable__names__adjective}:<EOI> {bioavailable#yes&no}
+    - |-
+      Task: Please answer the multiple choice question below with {%multiple_choice_enum%2%aA1}.
+      Question: Is the molecule with the {SMILES__description} representation of {SMILES#} {bioavailable__names__adjective}?
+      Options:
+      {bioavailable%}
+      Answer: {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question below with {%multiple_choice_enum%2%aA1}.
+      Question: Is the molecule with the {SMILES__description} representation of {SMILES#} {bioavailable__names__adjective}?
+      Options:
+      {bioavailable%}
+      Answer:<EOI> {%multiple_choice_result}
