--- a/data/tabular/bioavailability_ma_et_al/meta.yaml
+++ b/data/tabular/bioavailability_ma_et_al/meta.yaml
@@ -53,10 +53,10 @@ bibtex:
       oral bioavailability derived by using GA-CG-SVM method},
       journal = {Journal of Pharmaceutical and Biomedical Analysis}
 templates:
-    - The molecule with the {SMILES__description} representation of {SMILES#} exhibits {bioavailable#no &NULL}{bioavailable__names__adjective} properties.
-    - Based on the {SMILES__description} representation {SMILES#}, the molecule has {bioavailable#no &NULL}{bioavailable__names__adjective} characteristics.
+    - The molecule with the {SMILES__description} representation of {SMILES#} is {bioavailable#not &NULL}{bioavailable__names__adjective}.
+    - Based on the {SMILES__description} representation {SMILES#}, the molecule is {bioavailable#not &NULL}{bioavailable__names__adjective}.
     - The {SMILES__description} {SMILES#} represents a molecule that is {bioavailable#not &NULL}identified as {bioavailable__names__adjective}.
-    - The {SMILES__description} {SMILES#} is {bioavailable#no &NULL}{bioavailable__names__adjective}.
+    - The {SMILES__description} {SMILES#} is {bioavailable#not &NULL}{bioavailable__names__adjective}.
     - The molecule {SMILES#} is {bioavailable__names__adjective}.
     - Is the {SMILES__description} {SMILES#} {bioavailable__names__adjective}:<EOI> {bioavailable#yes&no}
     - |-
