feat: add templates for blood_brain_barrier_martins_et_al 3

--- a/data/tabular/blood_brain_barrier_martins_et_al/meta.yaml
+++ b/data/tabular/blood_brain_barrier_martins_et_al/meta.yaml
@@ -82,12 +82,12 @@ templates:
     - The molecule {SMILES#} is {penetrate_BBB__names__adjective}.
     - |-
       Task: Please classify a molecule based on the description.
-      Description: Is the molecule {penetrate_BBB__names__adjective}?
+      Description: A molecule that is {penetrate_BBB__names__adjective}.
       Molecule {SMILES__description}: {SMILES#}
       Result: {penetrate_BBB#False&True}
     - |-
       Task: Please classify a molecule based on the description.
-      Description: Is the molecule {penetrate_BBB__names__adjective}?
+      Description: A molecule that is {penetrate_BBB__names__adjective}.
       Molecule {SMILES__description}: {SMILES#}
       Result: This molecule is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}
     - |-
