--- a/data/tabular/blood_brain_barrier_martins_et_al/meta.yaml
+++ b/data/tabular/blood_brain_barrier_martins_et_al/meta.yaml
@@ -72,8 +72,8 @@ bibtex:
       title = {MoleculeNet: a benchmark for molecular machine learning},
       journal = {Chemical Science}
 templates:
-    - The molecule with the {SMILES__description} representation of {SMILES#} is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}.
-    - Based on the {SMILES__description} representation {SMILES#}, the molecule is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}.
+    - The molecule with the {SMILES__description} of {SMILES#} is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}.
+    - Based on the {SMILES__description} {SMILES#}, the molecule is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}.
     - The {SMILES__description} {SMILES#} represents a molecule that is {penetrate_BBB#not &NULL}identified as {penetrate_BBB__names__adjective}.
     - The molecule represented with the {SMILES__description} {SMILES#} is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}.
     - '{SMILES#} represents a molecule that is {penetrate_BBB#not &NULL}identified as {penetrate_BBB__names__adjective}.'
@@ -101,10 +101,10 @@ templates:
       User: Is the molecule with the {SMILES__description} {SMILES#} {penetrate_BBB__names__adjective}?
       Assistant: {penetrate_BBB#No&Yes}, it is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}.
     - |-
-      User: Can you give me the {SMILES__description} representation of a molecule that is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}?
+      User: Can you give me the {SMILES__description} of a molecule that is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}?
       Assistant: Yes, here you go: {SMILES#}
     - |-
-      User: I'm looking for the {SMILES__description} representation of a molecule that is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}?
+      User: I'm looking for the {SMILES__description} of a molecule that is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}?
       Assistant: This is a molecule that is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}: {SMILES#}
     - |-
       User: I want to create a molecule {SMILES__description}.
@@ -119,7 +119,7 @@ templates:
     - Is the {SMILES__description} {SMILES#} {penetrate_BBB__names__adjective}:<EOI> {penetrate_BBB#yes&no}
     - |-
       Task: Please answer the multiple choice question below with {%multiple_choice_enum%2%aA1}.
-      Question: Is the molecule with the {SMILES__description} representation of {SMILES#} {penetrate_BBB__names__adjective}?
+      Question: Is the molecule with the {SMILES__description} of {SMILES#} {penetrate_BBB__names__adjective}?
       Options:
       {penetrate_BBB%}
       Answer: {%multiple_choice_result}
