--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,11 @@ dataset_creation = [
         "PyTDC",
         "rdkit-pypi",
         "ruamel.yaml",
-        "modin[all]"
+        "modin[all]",
+        "selfies",
+        "deepsmiles",
+        "pubchempy",
+        "tucan@git+https://github.com/TUCAN-nest/TUCAN.git"  # the current version has bugs due to the type checking, maybe this is due to our python version?
 ]
 
 training = [
