--- a/data/tabular/blood_brain_barrier_martins_et_al/meta.yaml
+++ b/data/tabular/blood_brain_barrier_martins_et_al/meta.yaml
@@ -118,14 +118,16 @@ templates:
       Assistant: Got it, this {SMILES__description} is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}: {SMILES#}
     - Is the {SMILES__description} {SMILES#} {penetrate_BBB__names__adjective}:<EOI> {penetrate_BBB#yes&no}
     - |-
-      Task: Please answer the multiple choice question below with {%multiple_choice_enum%2%aA1}.
+      Task: Please answer the multiple choice question.
       Question: Is the molecule with the {SMILES__description} of {SMILES#} {penetrate_BBB__names__adjective}?
+      Constraint: Even if you are uncertain, you must pick either {%multiple_choice_enum%2%aA1} without using any other words.
       Options:
       {penetrate_BBB%}
       Answer: {%multiple_choice_result}
     - |-
-      Task: Please answer the multiple choice question below with {%multiple_choice_enum%2%aA1}.
-      Question: Is the molecule with the {SMILES__description} representation of {SMILES#} {penetrate_BBB__names__adjective}?
+      Task: Please answer the multiple choice question.
+      Question: Is the molecule with the {SMILES__description} of {SMILES#} {penetrate_BBB__names__adjective}?
+      Constraint: Even if you are uncertain, you must pick either {%multiple_choice_enum%2%aA1} without using any other words.
       Options:
       {penetrate_BBB%}
       Answer:<EOI> {%multiple_choice_result}
