--- a/data/tabular/blood_brain_barrier_martins_et_al/meta.yaml
+++ b/data/tabular/blood_brain_barrier_martins_et_al/meta.yaml
@@ -84,6 +84,7 @@ templates:
       Task: Please classify a molecule based on the description.
       Description: A molecule that is {penetrate_BBB__names__adjective}.
       Molecule {SMILES__description}: {SMILES#}
+      Constraint: Even if you are uncertain, you must pick either "True" or "False" without using any other words.
       Result: {penetrate_BBB#False&True}
     - |-
       Task: Please classify a molecule based on the description.
@@ -117,6 +118,12 @@ templates:
       User: Yes, the molecule should {penetrate_BBB#not &NULL}be {penetrate_BBB__names__adjective}.
       Assistant: Got it, this {SMILES__description} is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}: {SMILES#}
     - Is the {SMILES__description} {SMILES#} {penetrate_BBB__names__adjective}:<EOI> {penetrate_BBB#yes&no}
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that is {penetrate_BBB__names__adjective}.
+      Molecule {SMILES__description}: {SMILES#}
+      Constraint: Even if you are uncertain, you must pick either "True" or "False" without using any other words.
+      Result:<EOI> {penetrate_BBB#False&True}
     - |-
       Task: Please answer the multiple choice question.
       Question: Is the molecule with the {SMILES__description} of {SMILES#} {penetrate_BBB__names__adjective}?
