--- a/data/tabular/blood_brain_barrier_martins_et_al/meta.yaml
+++ b/data/tabular/blood_brain_barrier_martins_et_al/meta.yaml
@@ -90,7 +90,8 @@ templates:
       Task: Please classify a molecule based on the description.
       Description: A molecule that is {penetrate_BBB__names__adjective}.
       Molecule {SMILES__description}: {SMILES#}
-      Result: This molecule is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}
+      Constraint: Use a full sentence to answer the question.
+      Result: This molecule is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}.
     - |-
       Task: Please create a molecule {SMILES__description} based on the description.
       Description: A molecule that is {penetrate_BBB__names__adjective}.
