--- a/experiments/configs/eval_configs/stem_eval_config.yaml
+++ b/experiments/configs/eval_configs/stem_eval_config.yaml
@@ -1,6 +1,6 @@
 model: hf-causal
 model_args: "pretrained=/fsx/path/checkpoint" # update
-tasks: "pile_pubmed-abstracts,pile_pubmed-central,headqa_en,sciq,pubmedqa,is_smile,complete_smile,periodic_table,openbookqa,hendrycksTest-college_biology,hendrycksTest-college_chemistry,hendrycksTest-college_mathematics,hendrycksTest-college_physics,hendrycksTest-high_school_mathematics,hendrycksTest-high_school_biology,hendrycksTest-high_school_chemistry,hendrycksTest-high_school_physics"
+tasks: "pile_pubmed-abstracts,pile_pubmed-central,headqa_en,sciq,pubmedqa,is_smiles,complete_smiles,periodic_table,openbookqa,hendrycksTest-college_biology,hendrycksTest-college_chemistry,hendrycksTest-college_mathematics,hendrycksTest-college_physics,hendrycksTest-high_school_mathematics,hendrycksTest-high_school_biology,hendrycksTest-high_school_chemistry,hendrycksTest-high_school_physics"
 num_fewshot: 0
 batch_size: 12
 device: 'cuda:0'
