feat: flexible multiple choice templates for blood_brain_barrier_martins_et_al

--- a/data/tabular/blood_brain_barrier_martins_et_al/meta.yaml
+++ b/data/tabular/blood_brain_barrier_martins_et_al/meta.yaml
@@ -134,8 +134,22 @@ templates:
       Answer: {%multiple_choice_result}
     - |-
       Task: Please answer the multiple choice question.
+      Question: Which molecules are {penetrate_BBB__names__adjective}?
+      Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any other words.
+      Options:
+      {SMILES%penetrate_BBB%}
+      Answer: {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
       Question: Is the molecule with the {SMILES__description} of {SMILES#} {penetrate_BBB__names__adjective}?
       Constraint: Even if you are uncertain, you must pick either {%multiple_choice_enum%2%aA1} without using any other words.
       Options:
       {penetrate_BBB%}
+      Answer:<EOI> {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Which molecules are {penetrate_BBB__names__adjective}?
+      Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any other words.
+      Options:
+      {SMILES%penetrate_BBB%}
       Answer:<EOI> {%multiple_choice_result}
