feat: add {penetrate_BBB#not &NULL}

--- a/data/tabular/blood_brain_barrier_martins_et_al/meta.yaml
+++ b/data/tabular/blood_brain_barrier_martins_et_al/meta.yaml
@@ -134,7 +134,7 @@ templates:
       Answer: {%multiple_choice_result}
     - |-
       Task: Please answer the multiple choice question.
-      Question: Which molecules are {penetrate_BBB__names__adjective}?
+      Question: Which molecules are {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}?
       Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any other words.
       Options:
       {SMILES%penetrate_BBB%}
@@ -148,7 +148,7 @@ templates:
       Answer:<EOI> {%multiple_choice_result}
     - |-
       Task: Please answer the multiple choice question.
-      Question: Which molecules are {penetrate_BBB__names__adjective}?
+      Question: Which molecules are {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}?
       Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any other words.
       Options:
       {SMILES%penetrate_BBB%}
