--- a/data/tabular/clintox/meta.yaml
+++ b/data/tabular/clintox/meta.yaml
@@ -10,9 +10,11 @@ targets:
       units:
       type: boolean
       names:
+          - noun: toxicity
+          - noun: clinical toxicity
+          - adjective: toxic
           - adjective: clinically toxic
           - gerund: displaying clinical toxicity
-          - adjective: toxic
       uris:
           - http://purl.bioontology.org/ontology/MESH/Q000633
           - https://ncit.nci.nih.gov/ncitbrowser/ConceptReport.jsp?dictionary=NCI_Thesaurus&ns=ncit&code=C27990
