--- a/data/tabular/pampa_ncats/meta.yaml
+++ b/data/tabular/pampa_ncats/meta.yaml
@@ -13,6 +13,7 @@ targets:
       units:
       type: boolean
       names:
+          - noun: permeability
           - verb: is permeable in the PAMPA assay
           - verb: shows permeability in parallel artificial membrane permeability assay (PAMPA) assay
           - gerund: permeating in the PAMPA assay
