--- a/data/tabular/bioavailability_ma_et_al/meta.yaml
+++ b/data/tabular/bioavailability_ma_et_al/meta.yaml
@@ -11,8 +11,7 @@ targets:
       type: boolean
       names:
           - noun: oral bioavailability
-          - noun: bioavailability
-          - adjective: bioavailable
+          - adjective: orally bioavailable
       uris:
           - http://ncicb.nci.nih.gov/xml/owl/EVS/Thesaurus.owl#C70913
 benchmarks:
@@ -53,21 +52,21 @@ bibtex:
       oral bioavailability derived by using GA-CG-SVM method},
       journal = {Journal of Pharmaceutical and Biomedical Analysis}
 templates:
-    - The molecule with the {SMILES__description} representation of {SMILES#} is {bioavailable#not &NULL}{bioavailable__names__adjective}.
-    - Based on the {SMILES__description} representation {SMILES#}, the molecule is {bioavailable#not &NULL}{bioavailable__names__adjective}.
-    - The {SMILES__description} {SMILES#} represents a molecule that is {bioavailable#not &NULL}identified as {bioavailable__names__adjective}.
-    - The {SMILES__description} {SMILES#} is {bioavailable#not &NULL}{bioavailable__names__adjective}.
-    - The molecule {SMILES#} is {bioavailable__names__adjective}.
-    - Is the {SMILES__description} {SMILES#} {bioavailable__names__adjective}:<EOI> {bioavailable#yes&no}
+    - The molecule with the {SMILES__description} representation {SMILES#} has a {bioavailable#low&high} {bioavailable__names__noun}.
+    - Based on the {SMILES__description} representation {SMILES#}, the molecule has a {bioavailable#low&high} {bioavailable__names__noun}.
+    - The {SMILES__description} {SMILES#} represents a molecule that has a {bioavailable#low&high} {bioavailable__names__noun}.
+    - The {SMILES__description} {SMILES#} has a {bioavailable#low&high} {bioavailable__names__noun}.
+    - The molecule {SMILES#} has a {bioavailable#low&high} {bioavailable__names__noun}.
+    - Is the {SMILES__description} {SMILES#} {bioavailable__names__adjective}? <EOI> {bioavailable#yes&no}
     - |-
       Task: Please answer the multiple choice question below with {%multiple_choice_enum%2%aA1}.
-      Question: Is the molecule with the {SMILES__description} representation of {SMILES#} {bioavailable__names__adjective}?
+      Question: Is the molecule with the {SMILES__description} representation {SMILES#} {bioavailable__names__adjective}?
       Options:
       {bioavailable%}
       Answer: {%multiple_choice_result}
     - |-
       Task: Please answer the multiple choice question below with {%multiple_choice_enum%2%aA1}.
-      Question: Is the molecule with the {SMILES__description} representation of {SMILES#} {bioavailable__names__adjective}?
+      Question: Is the molecule with the {SMILES__description} representation {SMILES#} {bioavailable__names__adjective}?
       Options:
       {bioavailable%}
       Answer:<EOI> {%multiple_choice_result}
