--- a/data/tabular/ames_mutagenicity/meta.yaml
+++ b/data/tabular/ames_mutagenicity/meta.yaml
@@ -52,7 +52,7 @@ bibtex:
       title = {In silico Prediction of Chemical Ames Mutagenicity},
       journal = {Journal of Chemical Information and Modeling}
 templates:
-    - The {#molecule with the |!}{SMILES__description} {#representation of |!}{SMILES#} {#shows|exhibits|displays!} {mutagenic#no &NULL}{mutagenic__names__adjective}
+    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} {#shows|exhibits|displays!} {mutagenic#no &NULL}{mutagenic__names__adjective}
       properties.
     - Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule has {mutagenic#no &NULL}{mutagenic__names__adjective} {#properties|characteristics|features!}.
     - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that is {mutagenic#not &NULL}identified as {mutagenic__names__adjective}.
@@ -75,10 +75,10 @@ templates:
       Description: A molecule that is {mutagenic__names__adjective}.
       Result: {SMILES#}
     - |-
-      User: Can you {#tell me|derive|estimate!} if the {#molecule with the |!}{SMILES__description} {SMILES#} is {mutagenic__names__adjective}?
+      User: Can you {#tell me|derive|estimate!} if the molecule with the {SMILES__description} {SMILES#} is {mutagenic__names__adjective}?
       Assistant: {mutagenic#No&Yes}, this molecule is {mutagenic#not &NULL}{mutagenic__names__adjective}.
     - |-
-      User: Is the {#molecule with the |!}{SMILES__description} {SMILES#} {mutagenic__names__adjective}?
+      User: Is the molecule with the {SMILES__description} {SMILES#} {mutagenic__names__adjective}?
       Assistant: {mutagenic#No&Yes}, it is {mutagenic#not &NULL}{mutagenic__names__adjective}.
     - |-
       User: Can you {#give me|create|generate!} the {SMILES__description} of a molecule that is {mutagenic#not &NULL}{mutagenic__names__adjective}?
@@ -105,14 +105,14 @@ templates:
       Result:<EOI> {mutagenic#False&True}
     - |-
       Task: Please answer the multiple choice question.
-      Question: Is the {#molecule with the |!}{SMILES__description} {#representation of |!}{SMILES#} {mutagenic__names__adjective}?
+      Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} {mutagenic__names__adjective}?
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
       Options:
       {mutagenic%}
       Answer: {%multiple_choice_result}
     - |-
       Task: Please answer the multiple choice question.
-      Question: Is the {#molecule with the |!}{SMILES__description} {#representation of |!}{SMILES#} {mutagenic__names__adjective}?
+      Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} {mutagenic__names__adjective}?
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
       Options:
       {mutagenic%}
