--- a/data/tabular/bioavailability_ma_et_al/meta.yaml
+++ b/data/tabular/bioavailability_ma_et_al/meta.yaml
@@ -52,11 +52,11 @@ bibtex:
       oral bioavailability derived by using GA-CG-SVM method},
       journal = {Journal of Pharmaceutical and Biomedical Analysis}
 templates:
-    - The {#molecule with the |!}{SMILES__description} {#representation of |!}{SMILES#} has a {bioavailable#low&high} {bioavailable__names__noun}.
+    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} has a {bioavailable#low&high} {bioavailable__names__noun}.
     - Based on the {SMILES__description} {#representation of |!}{SMILES#}, the molecule has a {bioavailable#low&high} {bioavailable__names__noun}.
     - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that has a {bioavailable#low&high} {bioavailable__names__noun}.
     - The {SMILES__description} {SMILES#} has a {bioavailable#low&high} {bioavailable__names__noun}.
-    - The {#molecule with the |!}{SMILES__description} {SMILES#} has a {bioavailable#low&high} {bioavailable__names__noun}.
+    - The molecule with the {SMILES__description} {SMILES#} has a {bioavailable#low&high} {bioavailable__names__noun}.
     - |-
       Task: Please classify a molecule based on the description.
       Description: Predict if the molecule has a low or high {bioavailable__names__noun}?
@@ -74,10 +74,10 @@ templates:
       Description: A molecule that has a {bioavailable#low&high} {bioavailable__names__noun}.
       Result: {SMILES#}
     - |-
-      User: Can you {#tell me|derive|estimate!} if the {#molecule with the |!}{SMILES__description} {SMILES#} has a low or high {bioavailable__names__noun}?
+      User: Can you {#tell me|derive|estimate!} if the molecule with the {SMILES__description} {SMILES#} has a low or high {bioavailable__names__noun}?
       Assistant: {#Yes|Of course|Sure|Yes, I'm happy to help!}, this molecule has a {bioavailable#low&high} {bioavailable__names__noun}.
     - |-
-      User: Has this {#molecule with the |!}{SMILES__description} {SMILES#} a low or high {bioavailable__names__noun}?
+      User: Has the molecule with the {SMILES__description} {SMILES#} a low or high {bioavailable__names__noun}?
       Assistant: It has a {bioavailable#low&high} {bioavailable__names__noun}.
     - |-
       User: Can you {#give me|create|generate!} the {SMILES__description} of a molecule that has a {bioavailable#low&high} {bioavailable__names__noun}?
@@ -98,14 +98,14 @@ templates:
     - Is the {SMILES__description} {SMILES#} {bioavailable__names__adjective}?<EOI> {bioavailable#yes&no}
     - |-
       Task: Please answer the multiple choice question.
-      Question: Has the {#molecule with the |!}{SMILES__description} {#representation of |!}{SMILES#} a high {bioavailable__names__noun}?
+      Question: Has the molecule with the {SMILES__description} {#representation of |!}{SMILES#} a high {bioavailable__names__noun}?
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
       Options:
       {bioavailable%}
       Answer: {%multiple_choice_result}
     - |-
       Task: Please answer the multiple choice question.
-      Question: Has the {#molecule with the |!}{SMILES__description} {#representation of |!}{SMILES#} a high {bioavailable__names__noun}?
+      Question: Has the molecule with the {SMILES__description} {#representation of |!}{SMILES#} a high {bioavailable__names__noun}?
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
       Options:
       {bioavailable%}
