feat: update templates blood_brain_barrier_martins_et_al molecule with

--- a/data/tabular/blood_brain_barrier_martins_et_al/meta.yaml
+++ b/data/tabular/blood_brain_barrier_martins_et_al/meta.yaml
@@ -72,7 +72,7 @@ bibtex:
       title = {MoleculeNet: a benchmark for molecular machine learning},
       journal = {Chemical Science}
 templates:
-    - The {#molecule with the |!}{SMILES__description} {SMILES#} is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}.
+    - The molecule with the {SMILES__description} {SMILES#} is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}.
     - Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}.
     - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that is {penetrate_BBB#not &NULL}identified as {penetrate_BBB__names__adjective}.
     - The molecule represented with the {SMILES__description} {SMILES#} is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}.
@@ -97,10 +97,10 @@ templates:
       Description: A molecule that is {penetrate_BBB__names__adjective}.
       Result: {SMILES#}
     - |-
-      User: Can you {#tell me|derive|estimate!} if the {#molecule with the |!}{SMILES__description} {SMILES#} is {penetrate_BBB__names__adjective}?
+      User: Can you {#tell me|derive|estimate!} if the molecule with the {SMILES__description} {SMILES#} is {penetrate_BBB__names__adjective}?
       Assistant: {penetrate_BBB#No&Yes}, this molecule is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}.
     - |-
-      User: Is the {#molecule with the |!}{SMILES__description} {SMILES#} {penetrate_BBB__names__adjective}?
+      User: Is the molecule with the {SMILES__description} {SMILES#} {penetrate_BBB__names__adjective}?
       Assistant: {penetrate_BBB#No&Yes}, it is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}.
     - |-
       User: Can you {#give me|create|generate!} the {SMILES__description} of a molecule that is {penetrate_BBB#not &NULL}{penetrate_BBB__names__adjective}?
