fix: no to not in templates

--- a/data/tabular/ames_mutagenicity/meta.yaml
+++ b/data/tabular/ames_mutagenicity/meta.yaml
@@ -56,7 +56,7 @@ templates:
       properties.
     - Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule has {mutagenic#no &NULL}{mutagenic__names__adjective} {#properties|characteristics|features!}.
     - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that is {mutagenic#not &NULL}identified as {mutagenic__names__adjective}.
-    - The {SMILES__description} {SMILES#} is {mutagenic#no &NULL}{mutagenic__names__adjective}.
+    - The {SMILES__description} {SMILES#} is {mutagenic#not &NULL}{mutagenic__names__adjective}.
     - The {#molecule |!}{SMILES__description} {SMILES#} is {mutagenic__names__adjective}.
     - |-
       Task: Please classify a molecule based on the description.
