feat: update templates clintox

--- a/data/tabular/clintox/meta.yaml
+++ b/data/tabular/clintox/meta.yaml
@@ -48,3 +48,86 @@ bibtex:
       author = {Kaitlyn~M. Gayvert and Neel~S. Madhukar and Olivier Elemento},
       title = {A Data-Driven Approach to Predicting Successes and Failures of Clinical Trials},
       journal = {Cell Chemical Biology}}
+templates:
+    - The molecule with the {SMILES__description} {#representation of |!}{SMILES#} {#shows|exhibits|displays!} {clinical_toxicity#no &NULL}{clinical_toxicity__names__noun}.
+    - Based on the {SMILES__description} {#representation |!}{SMILES#}, the molecule has {clinical_toxicity#no &NULL}{clinical_toxicity__names__adjective}
+      {#properties|characteristics|features!}.
+    - The {SMILES__description} {SMILES#} {#represents|is from!} a molecule that is {clinical_toxicity#not &NULL}identified as {clinical_toxicity__names__adjective}.
+    - The {#molecule |!}{SMILES__description} {SMILES#} is {clinical_toxicity#not &NULL}{clinical_toxicity__names__adjective}.
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that is {clinical_toxicity__names__adjective}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
+      Result: {clinical_toxicity#False&True}
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that is {clinical_toxicity__names__adjective}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Answer the question in a {#full|complete!} sentence.
+      Result: This molecule is {clinical_toxicity#not &NULL}{clinical_toxicity__names__adjective}.
+    - |-
+      Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
+      Description: A molecule that is {clinical_toxicity__names__adjective}.
+      Result: {SMILES#}
+    - |-
+      User: Can you {#tell me|derive|estimate!} if the molecule with the {SMILES__description} {SMILES#} is {clinical_toxicity__names__adjective}?
+      Assistant: {clinical_toxicity#No&Yes}, this molecule is {clinical_toxicity#not &NULL}{clinical_toxicity__names__adjective}.
+    - |-
+      User: Is the molecule with the {SMILES__description} {SMILES#} {clinical_toxicity__names__adjective}?
+      Assistant: {clinical_toxicity#No&Yes}, it is {clinical_toxicity#not &NULL}{clinical_toxicity__names__adjective}.
+    - |-
+      User: Can you {#give me|create|generate!} the {SMILES__description} of a molecule that is {clinical_toxicity#not &NULL}{clinical_toxicity__names__adjective}?
+      Assistant: {#Yes|Of course|Sure|Yes, I'm happy to help!}, here you go: {SMILES#}
+    - |-
+      User: I'm {#searching|looking!} for the {SMILES__description} of a molecule that is {clinical_toxicity#not &NULL}{clinical_toxicity__names__adjective}?
+      Assistant: This is a molecule that is {clinical_toxicity#not &NULL}{clinical_toxicity__names__adjective}: {SMILES#}
+    - |-
+      User: I want to {#come up with|create|generate!} a {#molecule |!}{SMILES__description}.
+      Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should I consider any {#constraints|specific points!} for the {#generation|creation!}?
+      User: Yes, please. The molecule should {clinical_toxicity#not &NULL}be {clinical_toxicity__names__adjective}.
+      Assistant: {#Ok|Got it!},{# here you go,|!} this {SMILES__description} is {clinical_toxicity#not &NULL}{clinical_toxicity__names__adjective}: {SMILES#}
+    - |-
+      User: I want to {#come up with|create|generate!} a {#molecule |!}{SMILES__description}.
+      Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
+      User: Yes, the molecule should {clinical_toxicity#not &NULL}be {clinical_toxicity__names__adjective}.
+      Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {clinical_toxicity#not &NULL}{clinical_toxicity__names__adjective}: {SMILES#}
+    - Is the {SMILES__description} {SMILES#} {clinical_toxicity__names__adjective}:<EOI> {clinical_toxicity#yes&no}
+    - |-
+      Task: Please classify a molecule based on the description.
+      Description: A molecule that is {clinical_toxicity__names__adjective}.
+      {#Molecule |!}{SMILES__description}: {SMILES#}
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either "True" or "False" without using any {#other|additional!} words.
+      Result:<EOI> {clinical_toxicity#False&True}
+    - |-
+      Task: Please {#give me|create|generate!} a {#molecule |!}{SMILES__description} based on the {#text |!}description{# below|!}.
+      Description: A molecule that is {clinical_toxicity__names__adjective}.
+      Result:<EOI> {SMILES#}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} {clinical_toxicity__names__adjective}?
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
+      Options:
+      {clinical_toxicity%}
+      Answer: {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} {clinical_toxicity__names__adjective}?
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
+      Options:
+      {clinical_toxicity%}
+      Answer:<EOI> {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Which molecules are {clinical_toxicity#not &NULL}{clinical_toxicity__names__adjective}?
+      Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
+      Options:
+      {SMILES%clinical_toxicity%}
+      Answer: {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Which molecules are {clinical_toxicity#not &NULL}{clinical_toxicity__names__adjective}?
+      Constraint: You must select none, one or more options from {%multiple_choice_enum%2-5%aA1} without using any {#other|additional!} words.
+      Options:
+      {SMILES%clinical_toxicity%}
+      Answer:<EOI> {%multiple_choice_result}
