feat: update templates cyp_p450_1a2_inhibition_veith_et_al for task

--- a/data/tabular/cyp_p450_1a2_inhibition_veith_et_al/meta.yaml
+++ b/data/tabular/cyp_p450_1a2_inhibition_veith_et_al/meta.yaml
@@ -120,6 +120,13 @@ templates:
       Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
       Options:
       {CYP1A2_inhibition%}
+      Answer: {%multiple_choice_result}
+    - |-
+      Task: Please answer the multiple choice question.
+      Question: Is the molecule with the {SMILES__description} {#representation of |!}{SMILES#} {CYP1A2_inhibition__names__gerund}?
+      Constraint: Even if you are {#uncertain|not sure!}, you must pick either {%multiple_choice_enum%2%aA1} without using any {#other|additional!} words.
+      Options:
+      {CYP1A2_inhibition%}
       Answer:<EOI> {%multiple_choice_result}
     - |-
       Task: Please answer the multiple choice question.
