feat: update templates half_life_obach

--- a/data/tabular/half_life_obach/meta.yaml
+++ b/data/tabular/half_life_obach/meta.yaml
@@ -11,8 +11,8 @@ targets:
       type: continuous
       names:
           - noun: half life
+          - noun: half life time
           - noun: drug half life time
-          - noun: the duration by which the concentration of the drug in the body is reduced by half
       uris:
           - http://purl.bioontology.org/ontology/MESH/D006207
 benchmarks:
