fix: yes no recoding choline_transporter_butkiewicz

--- a/data/tabular/choline_transporter_butkiewicz/meta.yaml
+++ b/data/tabular/choline_transporter_butkiewicz/meta.yaml
@@ -138,7 +138,7 @@ templates:
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
       User: Yes, the molecule should {activity_choline_transporter#not &NULL}be {activity_choline_transporter__names__gerund}.
       Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {activity_choline_transporter#not &NULL}{activity_choline_transporter__names__gerund}: {SMILES#}
-    - Is the {SMILES__description} {SMILES#} {activity_choline_transporter__names__gerund}:<EOI> {activity_choline_transporter#yes&no}
+    - Is the {SMILES__description} {SMILES#} {activity_choline_transporter__names__gerund}:<EOI> {activity_choline_transporter#no&yes}
     - |-
       Task: Please classify a molecule based on the description.
       Description: A molecule that is {activity_choline_transporter__names__gerund}.
