fix: yes no recoding cyp2c9_substrate_carbonmangels

--- a/data/tabular/cyp2c9_substrate_carbonmangels/meta.yaml
+++ b/data/tabular/cyp2c9_substrate_carbonmangels/meta.yaml
@@ -114,7 +114,7 @@ templates:
       Assistant: {#This sounds very exciting. |This sounds very interesting. !}Should it be a special {#molecule|one!}?
       User: Yes, the molecule should {CYP2C9_Substrate#not &NULL}be a {CYP2C9_Substrate__names__noun}.
       Assistant: {#Understood|Got it|Ok!}, this {SMILES__description} is {CYP2C9_Substrate#not &NULL}a {CYP2C9_Substrate__names__noun}: {SMILES#}
-    - Is the {SMILES__description} {SMILES#} a {CYP2C9_Substrate__names__noun}:<EOI> {CYP2C9_Substrate#yes&no}
+    - Is the {SMILES__description} {SMILES#} a {CYP2C9_Substrate__names__noun}:<EOI> {CYP2C9_Substrate#no&yes}
     - |-
       Task: Please classify a molecule based on the description.
       Description: A molecule that is a {CYP2C9_Substrate__names__noun}.
